--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "wifi-connect"
-version = "4.11.44"
-authors = ["Zahari Petkov <zahari@balena.io>"]
+version = "4.12.1"
+authors = ["Linus Reitmayr <linus.reitmayr@gaitq.com>"]
 description = "Easy WiFi setup for Linux devices from your mobile phone or laptop"
 
 [dependencies]
