Add connection check
- Check internet connectivity, only start captive portal if no connection
- Handle connection not activated gracefully by restarting the app

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ params = "0.8"
 log = "0.3"
 env_logger = "0.4"
 nix = "0.25"
+reqwest = { version = "0.12.4", features = ["blocking"] }
 
 [dependencies.error-chain]
 version = "0.12"
