--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ description = "Easy WiFi setup for Linux devices from your mobile phone or lapto
 
 [dependencies]
 network-manager = { git = "https://github.com/balena-io-modules/network-manager.git" }
-clap = "2.24"
+clap = "4.5.4"
 iron = "0.6"
 iron-cors = "0.8"
 staticfile = "0.5"
@@ -17,9 +17,9 @@ serde_json = "1.0"
 serde_derive = "1.0"
 persistent = "0.4"
 params = "0.8"
-log = "0.3"
-env_logger = "0.4"
-nix = "0.25"
+log = "0.4.21"
+env_logger = "0.11.3"
+nix = { version = "0.29.0", features = ["signal", "user"] }
 reqwest = { version = "0.12.4", features = ["blocking"] }
 
 [dependencies.error-chain]
