--- a/ui/package.json
+++ b/ui/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "eventemitter3": "^5.0.1",
     "promise-polyfill": "^8.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^5.0.1",
     "rendition": "^18.3.0",
+    "rfdc": "^1.4.1",
     "styled-components": "^5.0.1",
     "typescript": "^3.8.3",
     "whatwg-fetch": "^3.0.0"
