--- a/ui/public/static/manifest.json
+++ b/ui/public/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "GaitQ WiFi Connect",
-  "name": "Easy WiFi setup for GaitQ device from your mobile phone or laptop",
+  "short_name": "gaitQ WiFi Connect Portal",
+  "name": "Easy WiFi setup for gaitQ devices from your mobile phone or laptop",
   "icons": [
     {
       "src": "favicon.png",
